# WebM_Practice

./: .gitignore  CMakeLists.txt  LinuxPackages.txt  OSXPackages.txt  README.md
libs/glew/: CMakeLists.txt
libs/glm/: readme.md
libs/libnestegg/: CMakeLists.txt
libs/libvpx_src/Sources/: CMakeLists.txt
libs/libvpx_src/Sources/vp9/decoder/: vp9_detokenize.c
libs/libvpx_src/SourcesConfigureFiles/: vpx_config.h  vpx_dsp_rtcd.h
libs/libvpx_static/Linux-x64/lib/pkgconfig/: vpx.pc
libs/libvpx_static/OSX/lib/pkgconfig/: vpx.pc
libs/libvpx_static/Windows-x64/lib/pkgconfig/: vpx.pc
libs/libyuv/: CMakeLists.txt
res/: with_alpha_vp8-1.webm  with_alpha_vp8-2.webm  with_alpha_vp8-5.webm  with_alpha_vp8-6.webm  with_alpha_vp9-1.webm  with_alpha_vp9-2.webm  with_alpha_vp9-3.webm
src/: DrawManager.cpp  DrawManager.h  Helpers.cpp  Helpers.h  Shaders.cpp  Shaders.h  WebMVideoDecoder.cpp  WebMVideoDecoder.h  WebMYUVConverter.cpp  WebMYUVConverter.h  main.cpp
